src/index.scss
$primary: #02A6F2;
$content-width: 900px;

html, body {
    font-family: "Open Sans", Arial, sans-serif;
    margin: 0;
    padding: 0;
    line-height: initial !important; // Override normalize.css

    // Increase the font size slightly on desktop, but leaving it as-is for print
    @media screen {
        font-size: 18px;
    }
}

header {
    padding: 1em 0;
    background-color: $primary;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;

    h1 {
        text-align: center;

        a {
            color: inherit;
            text-decoration: none;
        }
    }

    @media print {
        img {
            // Invert colour so it appears nicely on a white background
            filter: invert(1);

            height: 100px;
        }
    }
}

section#logos {
    align-items: center;
    justify-content: space-between;
    flex-direction: initial;

    img {
        display: block;
        flex-grow: 1;
        flex-shrink: 1;
        width: 100%;
        margin: 1em;
        max-height: 100px;
        object-fit: contain;

        @media print {
            height: 75px;
        }
    }
}

section {
    padding: 0.75em max(calc((100vw - $content-width) / 2), 1rem);
    background-color: white;
    display: flex;
    flex-direction: column;

    &:nth-of-type(2n) {
        background-color: #f5f3f4;
    }
}

h2, h3, h4, h5, h6 {
    color: $primary;
    margin: 12px 0;
}

a {
    color: $primary;

}

table {
    margin: 0;
    padding: 0;
    width: 100%;

    thead {
        color: $primary;
    }

    th {
        border-bottom: 2px solid $primary;
        text-align: left;
    }

    th, td {
        padding: 0.5em;
    }
}

img {
    margin-left: auto;
    margin-right: auto;
}

.no-print {
    @media print {
        display: none;
    }
}

